--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A dummy page for demonstration purposes. Learn about services, contact, and more.">
     <title>Dummy HTML Page</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_MEASUREMENT_ID"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZY77DQPYBJ"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'YOUR_MEASUREMENT_ID');
+        gtag('config', 'G-ZY77DQPYBJ');
     </script>
     <style>
         body {
